--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,199 @@
 /* You can add global styles to this file, and also import other style files */
+:root{
+    --semiblack: #303030;
+    --offwhite : #F8F8F8;
+    --purple : #4E5166;
+    --purple-highlight : #a39daa;
+}
+body{
+    background-color: var(--offwhite);
+    margin: 0;
+    font-family: 'roboto';
+}
+@font-face{
+    font-family: roboto;
+    src: url(../public/fonts/Roboto-Regular.ttf);
+}
+@font-face{
+    font-family: robotoBold;
+    src: url(../public/fonts/Roboto-Bold.ttf);
+}
+
+label{
+    font-family: 'roboto';
+    font-size: 14px;
+}
+p{
+    font-family: 'roboto';
+    font-size: 12px;
+}
+h4{
+    font-family: 'roboto';
+    font-size: 16px;
+}
+h3{
+    font-family: 'roboto';
+    font-size: 32;
+}
+h2{
+    font-family: 'roboto';
+    font-size: 40;
+}
+h1{
+    font-family: 'roboto';
+    font-size: 64;
+}
+.button{
+    font-family: 'roboto';
+    position: relative;
+    background-color: transparent;
+    font-size: 15px;
+    padding: .5em;
+    padding-left: 1.5em;
+    padding-right: 1.5em;
+    font-weight: 500;
+    letter-spacing:.05em;
+    cursor: pointer;
+    outline: 0;
+    border: 0;
+    margin: .5em;
+    overflow: hidden;
+    z-index: 1;
+}
+.primary-button{
+    color: var(--offwhite);
+    transition: color .5s;
+
+    }
+
+.primary-button:hover{
+    
+    color: var(--semiblack);
+}
+
+.primary-button::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color:var(--purple) ;
+    z-index: -1;
+}
+
+
+.primary-button::after{
+    content: '';
+    position: absolute;
+    top: -50%;
+    right: -15%;
+    height: 100%;
+    aspect-ratio: 1/1;
+    border-radius: 10em;
+    background-color: var(--purple-highlight);
+
+    z-index: -1; 
+    opacity: 0;    
+    transform:scale(0) ;
+    transform-origin: center;
+    transition: .5s;
+
+}
+
+.primary-button:hover::after{
+    transform: scale(10);
+    opacity: 1;
+}
+
+.secondary-button{
+    color: var(--purple);
+
+}
+
+.secondary-button::before{
+    content: '';
+    position: absolute;
+    top: -32%;
+    left: 98%;
+    width: 10%;
+    aspect-ratio: 1/1;
+    background-color: var(--offwhite);
+    transform-origin: left;
+    z-index: -1;
+}
+.secondary-button:hover::before{
+    animation-name: secondary-button-animation;
+    animation-duration: 1s;
+}
+
+.secondary-button::after{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--offwhite);
+    box-shadow: inset 0px 0px 0px 2px var(--purple);
+    z-index: -2;
+}
+
+@keyframes secondary-button-animation{
+    0%{
+        transform: scaleX(1);
+        top: -32%;
+        left: 98%;
+        transform-origin: left;
+    }
+    25%{
+        transform: scaleX(1);
+        left: 98%;
+        top: 90%;
+    }
+    50%{
+        transform: scaleX(10);
+        top: 90%;
+        left: -7%;
+        transform-origin: right;
+      
+    }
+    75%{
+        transform: scaleX(1);
+        top: -26%;
+        left: -7%;
+        transform-origin: right;
+    }
+    100%{
+        transform: scaleX(1);
+        top: -26%;
+        left: 98%;
+    }
+
+}
+
+.ref-link{
+    color: var(--purple);
+    text-decoration: none;
+    font-size: 12px;
+}
+
+.ref-link-side{
+    margin-left: auto;
+}
+
+.section-input{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    padding-top: 1em;
+    padding-bottom: 1em;
+}
+.section-controls{
+     display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: end;
+    padding-top: 1em;
+    padding-bottom: 1em;
+}
