added layout for comments

--- a/src/app/list-item/list-item.component.html
+++ b/src/app/list-item/list-item.component.html
@@ -3,6 +3,7 @@
         <h4>List Title</h4>
     </div>
     <div class="list-content">
+        <!-- use click class for interaction -->
         <section class="list-box">
             <div></div>
         </section>
