--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -28,9 +28,7 @@
         <app-list-item />
         <section class="todo-hr"></section>
     </div>
-    <div class="todo-comments">
-
-    </div>
+    <app-list-comments />
 </div>
 
 
