--- a/src/app/list-item/list-item.component.css
+++ b/src/app/list-item/list-item.component.css
@@ -33,6 +33,10 @@
     transition: .2s;
 }
 
+.list-box.click div{
+    background-color: var(--purple);
+}
+
 .list-box div:hover{
     background-color: var(--purple);
 
