--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,18 +5,21 @@
         </section>
         <div class="login-page-mainbody">
             <h2>Welcome!</h2>
-            <form action="" *ngIf="isForgot == false">
+            <form action="" *ngIf="isForgot == false" (ngSubmit) = "onSubmitLogin()">
                 <section class="section-input">
                   
                     <app-input-box 
                     name="Username" 
                     placeholder = "Enter your username"
                     widthPx = "400px"
+                    (valueChanged)="username = $event"
                     />
                     <app-input-box 
+                    ngClass="password"
                     name="Password" 
                     placeholder = "Enter your password"
                     widthPx = "400px"
+                    (valueChanged)="password = $event"
                     />
                     <a href="javascript:void(0)" class="ref-link ref-link-side" (click)="forgotPass(true)">Forgot password?</a>
                 </section>
