--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -11,7 +11,10 @@
             <div class="home-content">
          
                 <div class="content-new">
-                    <app-list />
+                    <app-list *ngFor="let data of lists.list, let i = index" 
+                        [data]="data"
+                        [index]="i"
+                    />
                 </div>
                 <div class="content-scheduled"> 
                   
