--- a/src/app/sidebar-list/sidebar-list.component.html
+++ b/src/app/sidebar-list/sidebar-list.component.html
@@ -1,17 +1,11 @@
 <div class="sidebar-section">
     <li class="sidebar-section-header" (click)="isClicked(isopened)" >
         <i class="bi bi-caret-down"></i>
-       Personals
+       {{name}}
     </li>
     <div class="sidebar-section-body opened" #sectionBody>
-        <ul class="sidebar-section-list">
-            <li class="sidebar-section-content">Sample List</li>
-        </ul>
-        <ul class="sidebar-section-list">
-            <li class="sidebar-section-content">Sample List</li>
-        </ul>
-        <ul class="sidebar-section-list">
-            <li class="sidebar-section-content">Sample List</li>
+        <ul class="sidebar-section-list" *ngFor="let item of links">
+            <li class="sidebar-section-content">{{item}}</li>
         </ul>
     </div>
 </div>
