--- a/src/app/list-comments/list-comments.component.css
+++ b/src/app/list-comments/list-comments.component.css
@@ -19,8 +19,12 @@
     flex: 1;
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
+    flex-direction: column;
+    overflow: scroll;
 }
+.list-comment-body::-webkit-scrollbar {
+    display: none;
+  }
 .list-comment-footer{
     width: 100%;
     height: 40px;
@@ -117,4 +121,8 @@
     width: 100%;
     height: 1px;
     background-color: var(--list-background);
+}
+
+.list-comment-item{
+    height: fit-content;
 }
