--- a/src/app/list-comments/list-comments.component.html
+++ b/src/app/list-comments/list-comments.component.html
@@ -2,9 +2,11 @@
     <section class="list-comment-head">
         <h3>Comments</h3>
     </section>
-    <section class="list-comment-body" *ngFor="let item of commentData.list[0].comments, let i = index">
+    
+    <section class="list-comment-body" >
+      <div class="list-comment-item" *ngFor="let item of commentData.list[0].comments, let i = index">
         <div class="list-comment-user">
-            <img src="" alt="user">
+          <img src="" alt="user">
         </div>
         <div class="list-comment-content">
           <div class="list-content-head">
@@ -15,6 +17,7 @@
             <p>{{item.comment}}</p>
           </div>
         </div>
+      </div>
     </section>
     <section class="list-comment-footer">
       <div class="list-comment-img">
