--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -24,7 +24,7 @@
                     <a href="javascript:void(0)" class="ref-link ref-link-side" (click)="forgotPass(true)">Forgot password?</a>
                 </section>
                 <section class="section-controls">
-                    <button type="button" class=" button secondary-button ">Register</button>
+                    <button type="button" class=" button secondary-button " (click)="onRegister()" >Register</button>
                     <button type="submit" class="button primary-button ">Log In</button>
                 </section>
             </form>
